fix(css): fix css overflow container

--- a/src/scss/atomic/organisms/_overflow-container.scss
+++ b/src/scss/atomic/organisms/_overflow-container.scss
@@ -76,6 +76,7 @@
     &:hover,
     &.exact-active {
         @extend .link;
+        display: block;
         color: $colorBlack;
         margin-bottom: $buildingUnit / 2;
 
@@ -130,6 +131,10 @@
         &:after {
             display: none;
         }
+    }
+
+    > span {
+        word-break: break-word;
     }
 }
 
